config/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/commit-id: 662c665e805546e88e01f8f49b3f753856f12f39
    app.quarkus.io/build-timestamp: 2021-11-25 - 22:37:06 +0000
  labels:
    app.kubernetes.io/name: summit-demo
    app.kubernetes.io/version: "1.0"
  name: summit-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: summit-demo
      app.kubernetes.io/version: "1.0"
  template:
    metadata:
      annotations:
        app.quarkus.io/commit-id: 662c665e805546e88e01f8f49b3f753856f12f39
        app.quarkus.io/build-timestamp: 2021-11-25 - 22:37:06 +0000
      labels:
        app.kubernetes.io/name: summit-demo
        app.kubernetes.io/version: "1.0"
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quay.io/wpernath/summit-demo:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: summit-demo
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 45
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 250m
              memory: 128Mi
