config/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/commit-id: 662c665e805546e88e01f8f49b3f753856f12f39
    app.quarkus.io/build-timestamp: 2021-11-25 - 22:37:06 +0000
  labels:
    app.kubernetes.io/name: summit-demo
    app.kubernetes.io/version: "1.0"
  name: summit-demo
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: summit-demo
    app.kubernetes.io/version: "1.0"
  type: ClusterIP
